# Youtube-rs

./: Cargo.toml  README.md  packages.sh
examples/: like_video.rs  upload_video.rs
pythonlib/: lib.py  search.py  secret.json
src/: data_structs.rs  lib.rs  liking.rs  options.rs  thumbnail.rs  video.rs
